base/laravel/laravel-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-worker
  labels:
    app: laravel-app
    role: worker
spec:
  # replicas managed by HPA
  selector:
    matchLabels:
      app: laravel-app
      role: worker
  template:
    metadata:
      labels:
        app: laravel-app
        role: worker
    spec:
      containers:
        - name: worker
          image: 043309367638.dkr.ecr.us-east-1.amazonaws.com/laravel-app-k8s:latest
          imagePullPolicy: Never
          workingDir: /var/www  # adjust if your app lives elsewhere
          command:
            - "php"
            - "/var/www/artisan"
            - "queue:work"
            - "--sleep=3"
            - "--tries=3"
            - "--timeout=60"
            - "--queue=default"
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
